fix editor dark mode selection issue

--- a/client/src/app/static/components/editor/editor.component.scss-theme.scss
+++ b/client/src/app/static/components/editor/editor.component.scss-theme.scss
@@ -149,4 +149,8 @@
   .link-tool__input {
     background-color: mat.get-color-from-palette($warn, .08);
   }
+
+  .ce-block--selected .ce-block__content {
+    background-color: mat.get-color-from-palette($primary, .12);
+  }
 }
